--- a/.github/workflows/upload-artifacts.yml
+++ b/.github/workflows/upload-artifacts.yml
@@ -36,7 +36,7 @@ jobs:
           python3 -m pip install requests
       - name: download artifacts v2
         env:
-          WORKFLOW_IDS: "9615874852" "9615874852"
+          WORKFLOW_IDS: "9615874852 9615874852"
         run: |
           IFS=' ' read -r -a input_array <<< ""$WORKFLOW_IDS"
           for element in "${input_array[@]}"; do
