iterating through arrays in github actions

--- a/.github/workflows/upload-artifacts.yml
+++ b/.github/workflows/upload-artifacts.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           WORKFLOW_IDS: "9615874852 9615874852"
         run: |
-          IFS=' ' read -r -a input_array <<< ""$WORKFLOW_IDS"
+          IFS=' ' read -r -a input_array <<< "$WORKFLOW_IDS"
           for element in "${input_array[@]}"; do
             echo "$element"
           done
