--- a/.github/workflows/upload-artifacts.yml
+++ b/.github/workflows/upload-artifacts.yml
@@ -37,6 +37,7 @@ jobs:
       - name: download artifacts v2
         env:
           WORKFLOW_IDS: "9615874852 9615874852"
+          GH_TOKEN: ${{github.token}}
         run: |
           python3 parse_for_artifacts.py -a "$WORKFLOW_IDS"
 #          IFS=' ' read -r -a input_array <<< "$WORKFLOW_IDS"
